# Novacore-Engine

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DAILY_AGENT_WORKFLOW.md  README.md  vcpkg.json
cmake/: NovacoreConfig.cmake.in
configs/net/: server_default.json
docs/: 00_REPOSITORY_ARCHITECTURE.md  01_ENGINE_ARCHITECTURE.md  02_RENDERER_VULKAN.md  03_ECS_ENTITIES.md  08_NETCODE.md  09_SERVER_ARCHITECTURE.md  12_ASSET_PIPELINE_STREAMING.md  13_TESTING_ACCEPTANCE.md  14_IDE_AND_TOOLCHAIN_RUNBOOK.md  PROJECT_STATUS.md
engine/include/fps/core/: Application.hpp  Assert.hpp  Config.hpp  Log.hpp  Time.hpp
engine/include/fps/ecs/: Components.hpp  Entity.hpp  World.hpp
engine/include/fps/net/: Client.hpp  Loopback.hpp  Server.hpp
engine/include/fps/platform/: Input.hpp  Window.hpp
engine/include/fps/render/: Renderer.hpp
engine/include/novacore/: Novacore.hpp
engine/include/novacore/assets/: AssetManifest.hpp  AssetRegistry.hpp  AssetStreamer.hpp  AssetTypes.hpp  GltfDocument.hpp  GltfMetadata.hpp
engine/include/novacore/core/: Application.hpp  Assert.hpp  ConfigDocument.hpp  ConfigRegistry.hpp  FixedStep.hpp  Log.hpp
engine/include/novacore/ecs/: Components.hpp  World.hpp
engine/include/novacore/io/: FileSystem.hpp
engine/include/novacore/math/: Types.hpp
engine/include/novacore/net/: BitStream.hpp  Loopback.hpp  Server.hpp  Types.hpp
engine/include/novacore/physics/: CharacterController.hpp
engine/include/novacore/platform/: Input.hpp  InputAction.hpp  Window.hpp
engine/include/novacore/render/: Mesh.hpp  Renderer.hpp  VulkanRuntime.hpp
engine/src/assets/: AssetManifest.cpp  AssetRegistry.cpp  AssetStreamer.cpp  AssetTypes.cpp  GltfDocument.cpp  GltfMetadata.cpp
engine/src/core/: Application.cpp  Config.cpp  ConfigDocument.cpp  ConfigRegistry.cpp  FixedStep.cpp  Log.cpp
engine/src/ecs/: World.cpp
engine/src/io/: FileSystem.cpp
engine/src/net/: BitStream.cpp  Client.cpp  Loopback.cpp  Server.cpp
engine/src/physics/: CharacterController.cpp
engine/src/platform/: Input.cpp  InputAction.cpp  Window.cpp
engine/src/render/: Mesh.cpp  Renderer.cpp  VulkanBackend.cpp  VulkanBackend.hpp  VulkanRuntime.cpp
server/src/: main.cpp
shaders/: README.md
shaders/vulkan/: debug_triangle.vert  ui_line.vert  ui_rect.vert  world_box.vert  world_line.vert  world_mesh.vert
tests/: novacore_smoke_tests.cpp
tools/: README.md
